3.0.0 preview